# uc-agentic-ai-class

0-boiler/src/: main.py
1-week_one/assignment-one/config/: news_agent.yml
1-week_one/assignment-one/src/: __init__.py
3-week_three/langgraph_intro/: main.py  pyproject.toml
3-week_three/learner_support/: pyproject.toml
3-week_three/learner_support/src/: enums.py  learner_support_triage.py
4-week_four/event_planning/: pyproject.toml
4-week_four/event_planning/src/: main.py
5-week_five/simple_rag/: pyproject.toml
5-week_five/simple_rag/.docs/: open_db.md
5-week_five/simple_rag/chroma_db/: chroma.sqlite3
5-week_five/simple_rag/src/: main.py
6-week_six/knowledge_base/: campus_services_guide.txt  career_services_faq.txt  course_registration_guide.txt  financial_aid_guide.txt
6-week_six/rag_agent/: pyproject.toml
6-week_six/rag_agent/src/: main.py
7-week_seven/chat_memory/src/: main.py
8-week_eight/uni_backend/: README.md
8-week_eight/uni_backend/src/: main.py
8-week_eight/uni_frontend/: package-lock.json  package.json
9-capstone/: ARCHITECTURE.md  README.md
9-capstone/.docs/dev/: northstar.postmain_collection.json
9-capstone/.docs/features/: northstar-csa-features.md
9-capstone/.docs/graph/: support-graph.html  support-graph.md  support-graph.mmd
9-capstone/knowledge_base/: README.md
9-capstone/northstar-backend/: pyproject.toml
9-capstone/northstar-backend/src/: main.py
9-capstone/northstar-backend/src/agents/: tools.py
9-capstone/northstar-backend/src/api/: chat_route.py  health_route.py
9-capstone/northstar-backend/src/graph/: support_graph.py
9-capstone/northstar-backend/src/schemas/: chat_schema.py  graph_schema.py
9-capstone/northstar-backend/src/services/: doc_service.py  llm_service.py  rag_service.py
9-capstone/northstar-backend/src/utils/: constants_util.py  enums_util.py  helper_util.py
9-capstone/northstar-frontend/: package-lock.json  package.json
week_one/assignment-one/: .env.example  .gitignore  README.md  pyproject.toml
week_one/assignment-one/config/: news_agent.yml
week_one/assignment-one/src/: main.py
week_three/langgraph_intro/: conditional_graph.py
week_three/learner_support/: README.md
(+28 files in other folders)
