[project]
name = "langgraph-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
]
