[project]
name = "learner-support"
version = "0.1.0"
description = "Learner support triage project built with LangGraph"
readme = "README.md"
authors = [
    { name = "Oluwatobi", email = "agbeleyeoluwatobi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.3",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
