[project]
name = "uc-ass-one"
version = "0.1.0"
description = "Bare Python codebase scaffolded with uv."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
    "newsapi-python>=0.2.7",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
